--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
