--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "mongoose": "^8.13.2",
+    "mssql": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
