--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "mongoose": "^8.13.2",
     "ms": "^2.1.3",
     "mssql": "^11.0.1",
+    "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
