--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
