--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.5.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.13.2",
     "ms": "^2.1.3",
     "mssql": "^11.0.1",
