--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ms": "^2.1.3",
     "mssql": "^11.0.1",
     "node-fetch": "^3.3.2",
+    "pdf-lib": "^1.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
