--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "moment-timezone": "^0.5.48",
